# zero2Prod

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  newsletters_are_delivered  spec.json  spec.yaml  sqlx-data.json
.github/workflows/: rust.yml
configuration/: base.yaml  production.yaml
migrations/: 20221104162124_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs  utils.rs
