[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Daniel Borne <borne.danielj@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
# web
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# http request package for testing
reqwest = "0.11"

# serialization (de)
serde = { version = "1", features = ["derive"]}

# setup the database on config yaml
config = "0.13"

# uuid for unique ids, chrono for timestampz
uuid = { version = "1", features = ["v4"] }
chrono = "0.4.15"

# logging
env_logger = "0.9"
log = "0.4"

#tracing
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
"runtime-actix-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]