[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Daniel Borne <borne.danielj@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
# web
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# http request package for testing
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls"]}

# serialization (de)
serde = { version = "1", features = ["derive"]}
serde-aux = "3"

# setup the database on config yaml
config = {version = "0.13", default-features = false, features = ["yaml"]}

# uuid for unique ids, chrono for timestampz
uuid = { version = "1", features = ["v4"] }
chrono = "0.4.15"

#subscriber validation
unicode-segmentation = "1"
validator = "0.14"
#rand for CSPRNG generation
rand = {version = "0.8", features = ["std_rng"]}

# error handling
thiserror = "1"

#tracing
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.6"
secrecy = { version = "0.8", features = ["serde"]}

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
"runtime-actix-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate",
"offline",
]

[dev-dependencies]
once_cell = "1"
claim = "0.5"
#fake for creating fake data for testing
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = {version = "1", features = ["rt", "macros"]}
wiremock = "0.5"
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
linkify = "0.8"